samples/_failures_safe/1761351843_5f816a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d6efa2e.c: In function ‘main’:
./samples/SAFE/__tmp_4d6efa2e.c:178:13: error: expected ‘;’ at end of input
  178 |         free
      |             ^
      |             ;
./samples/SAFE/__tmp_4d6efa2e.c:178:9: error: expected declaration or statement at end of input
  178 |         free
      |         ^~~~
./samples/SAFE/__tmp_4d6efa2e.c:178:9: error: expected declaration or statement at end of input
